fix: Change overflow in case content spills

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -60,6 +60,7 @@ main {
 
     display: flex;
     flex-direction: column;
+    overflow: clip;
 
     .wrapper {
         flex-grow: 1;
